030-software/fluxcd/apps/redis-commander/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: redis-commander
